@@ -2,7 +2,7 @@
 .SH NAME
 newsq \- view the leafnode news queue
 .SH SYNOPSIS
-.B newsq [GLOBAL OPTIONS] [-c]
+.B newsq [GLOBAL OPTIONS] [-cf]
 .SH "DESCRIPTION"
 .BR newsq
 outputs a summary of news that is in leafnode's out.going, in.coming and
@@ -27,6 +27,12 @@ Check mode. Checks the out.going queue without printing anything. The
 exit code is EXIT_SUCCESS (0) when out.going contains articles,
 EX_UNAVAILABLE when no articles are spooled in out.going and
 EXIT_FAILURE when there was an error.
+.TP
+.I -f
+Print list of article bodies marked for download by delaybody mode. No
+headers or summaries will be printed, the format is the group name, a
+colon (:), the article number, a space, and the message ID in angle
+brackets.
 .TP
 .I -h
 Print a short help and print the exit codes used in -c mode. They
